login and registration page created

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
 body {
+    font-family: "Poetsen One", sans-serif;
+    margin: 0;
+    place-items: center;
     background-color: #f0f2f5;
 }
 .navbar-custom {
@@ -35,6 +40,8 @@ body {
 }
 .post-card:hover {
     transform: scale(1.02); /* Slightly enlarge the card on hover */
+    background-image: radial-gradient(#E3E3D2,#B0B096);
+
 }
 .post-card img {
     border-top-left-radius: 10px;
@@ -50,10 +57,31 @@ body {
     color: #606770;
 }
 
+.post-show {
+    background-image: radial-gradient(#E3E3D2,#B0B096);
+}
 
-
-
-
-
-
-
+/* Login CSS */
+.login-container {
+    max-width: 400px;
+    margin-inline: auto;
+    margin-top: 7rem;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.login-container h2 {
+    margin-bottom: 20px;
+}
+.login-container .form-control {
+    margin-bottom: 15px;
+}
+.login-container .btn-primary {
+    width: 100%;
+}
+.login-container img {
+    max-width: 100px;
+    margin-bottom: 20px;
+    margin-left: 8rem;
+}
